<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!--
          Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
          It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
          or something similar.
     -->

    <string name="app_name">Lunch Time</string>

    <!--
          By convention, "action" denotes that this String will be used as the label for
          an Action,
          typically from the action bar.  The ActionBar is limited real estate, so shorter
           is better.
     -->

    <string name="restaurant_action_settings">Settings</string>

    <!-- Menu label to fetch updated weather info from the server -->

    <string name="restaurant_action_refresh">Refresh</string>
    <string name="title_activity_restaurant_detail">Details</string>

    <string name="title_activity_restaurant_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_restaurant_label" translatable="false">Restaurant</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_restaurant_key" translatable="false">restaurant</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_restaurant_default" translatable="false"> </string>

    <string name="restaurant_action_share">Share</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">lunchtimefrontend.herroj.com</string>
    <string name="content_authority" translatable="false">
        com.herroj.android.lunchtimefrontend.app
    </string>

    <!-- Notification Format -->
    <string name="format_notification">
        Restaurant: <xliff:g id="restaurant">%1$s</xliff:g>
        Opening: <xliff:g id="horaApertura">%2$s</xliff:g>
        Close: <xliff:g id="horaCierre">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Lunch Time Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="bk" translatable="false">bk</string>

</resources>
